# BlackSmithMC

./: .gitignore  .markdownlint.json  .version  Cargo.toml  LICENSE.md  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: rust-clippy.yml
blacksmith/: Cargo.toml
blacksmith/api/: Cargo.toml
blacksmith/commands/: Cargo.toml
blacksmith/commands/src/: lib.rs
blacksmith/core/: Cargo.toml
blacksmith/core/src/: lib.rs
blacksmith/src/: main.rs
docs/: README.md
feather/protocol/src/: lib.rs
feather/server/: Cargo.toml  config.toml
feather/server/src/: builder.rs  client.rs  init.rs  initial_handler.rs  logging.rs  packet_handlers.rs  plugin.rs  systems.rs
feather/server/src/systems/: chat.rs
feather/world-format/src/: lib.rs
libcraft/text/src/: text.rs
plugins/: Cargo.toml  README.md
plugins/console/: Cargo.toml
plugins/console/src/: lib.rs
plugins/example/: Cargo.toml
plugins/example/src/: lib.rs
plugins/src/: lib.rs
plugins/website/: Cargo.toml
plugins/website/src/: lib.rs  worker.rs
plugins/world-format/src/: lib.rs  threadpool.rs
quill/: Cargo.toml  README.md
quill/src/: lib.rs  plugin.rs
test/: config.toml  plugins.toml
vane/src/: borrow.rs  entity.rs  event.rs  world.rs
vane/src/storage/: blob_array.rs  component_vec.rs  sparse_set.rs
vane/src/world/: components.rs
