[workspace]
members = [
    #! CORE
    "blacksmith",

    #! PLUGINS
    #? Example Plugin, uncomment to include
    #"plugins/example",




    #! OTHER
    "libcraft/core",
    "libcraft/blocks",
    "libcraft/items",
    "libcraft/macros",
    "libcraft/particles",
    "libcraft/text",
    "libcraft/inventory",
    "libcraft/chunk",
    "libcraft/anvil",
    "libcraft/generators",
    "libcraft",
    "quill",
    "plugins/world-format",
    "feather/world-format",
    "feather/utils",
    "feather/datapacks",
    "feather/worldgen",
    "feather/common",
    "feather/protocol",
    "feather/server",
    "proxy",
    "vane",
]
exclude = [
    "script"
]
default-members = [
    "blacksmith"
]