[package]
name = "blacksmithmc"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
feather-server = { path = "../feather/server", package = "feather-server" }
feather-common = { path = "../feather/common" }
libcraft = { path = "../libcraft" }
quill = { path = "../quill" }
plugins = { path = "../plugins" }


[[bin]]
name = "black_smith_mc_server"
path = "src/main.rs"