[package]
name = "quill"
version = "0.1.0"
authors = ["AtomicGamer"]
edition = "2021"

[dependencies]
ahash = "0.7"
anyhow = "1"
derive_more = "0.99"
flume = "0.10"
libcraft = { path = "../libcraft" }
log = "0.4"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
smartstring = { version = "1", features = ["serde"] }
time = { version = "0.3", features = ["local-offset", "formatting", "macros"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.5"
uuid = { version = "0.8", features = ["serde", "v4"] }
vane = { path = "../vane" }
